# project-manager

./: Makefile  Makefile.in  config.h  config.status  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
include/: actions.h  debug.h  manifest.h  options.h  utils.h
src/: Makefile  Makefile.am  Makefile.in  actions.cpp  args.cpp  debug.cpp  manifest.cpp  pm  pm.c  pm.cpp  settings.cpp  utils.cpp
src/.deps/: pm.Po
src/actions/: init.cpp
